# Workshop-Api

./: README.md  pyproject.toml
src/controller/user/: crud.py
src/db/: connection.py
src/models/: user.py
src/routes/: user.py
src/service/: user.py
